# ChangeLog for dev-python/pympler
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pympler/ChangeLog,v 1.24 2015/04/07 14:18:02 jlec Exp $

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> -pympler-0.2.0.ebuild:
  Drop old

  05 Jan 2014; Agostino Sarubbo <ago@gentoo.org> pympler-0.3.1.ebuild:
  Stable for sparc, wrt bug #481896

  05 Jan 2014; Agostino Sarubbo <ago@gentoo.org> pympler-0.3.1.ebuild:
  Stable for alpha, wrt bug #481896

  07 Dec 2013; Pacho Ramos <pacho@gentoo.org> pympler-0.3.1.ebuild:
  x86 stable, bug #481896

  11 Nov 2013; Justin Lecher <jlec@gentoo.org> +pympler-0.2.0.ebuild:
  Readd old version, #490986

  10 Nov 2013; Justin Lecher <jlec@gentoo.org> -pympler-0.2.0.ebuild,
  pympler-0.3.1.ebuild:
  Always build serially, #490792

  23 Sep 2013; Agostino Sarubbo <ago@gentoo.org> pympler-0.3.1.ebuild:
  Stable for ppc64, wrt bug #481896

  08 Sep 2013; Markus Meier <maekke@gentoo.org> pympler-0.3.1.ebuild:
  arm stable, bug #481896

  08 Sep 2013; Agostino Sarubbo <ago@gentoo.org> pympler-0.3.1.ebuild:
  Stable for amd64, wrt bug #481896

  04 Sep 2013; Agostino Sarubbo <ago@gentoo.org> pympler-0.3.1.ebuild:
  Stable for ppc, wrt bug #481896

  03 Sep 2013; Agostino Sarubbo <ago@gentoo.org> pympler-0.3.1.ebuild:
  Stable for ia64, wrt bug #481896

  21 Aug 2013; Justin Lecher <jlec@gentoo.org> pympler-0.3.1.ebuild:
  Fix [${PYTHON_USEDEP}]

  12 Jul 2013; Vicente Olivert Riera <vincent@gentoo.org> pympler-0.3.1.ebuild:
  ppc, ppc64 keywords added, bug #468426

  03 May 2013; Sergey Popov <pinkbyte@gentoo.org> pympler-0.3.1.ebuild:
  Readd ~arm keyword, wrt bug #468426

*pympler-0.3.1 (03 May 2013)

  03 May 2013; Justin Lecher <jlec@gentoo.org> +pympler-0.3.1.ebuild,
  metadata.xml:
  Version Bump, #468358; drop pypy as support ist broken

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> pympler-0.2.0.ebuild:
  Add ~arm, wrt bug #449220
