@@ -1,10 +1,10 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pympler/pympler-0.3.1.ebuild,v 1.14 2015/04/08 05:11:47 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pympler/pympler-0.4.ebuild,v 1.1 2015/04/08 05:11:47 idella4 Exp $
 
 EAPI=5
 
-PYTHON_COMPAT=( python{2_7,3_3} )
+PYTHON_COMPAT=( python{2_7,3_3,3_4} )
 
 inherit distutils-r1
 
@@ -17,8 +17,8 @@ SRC_URI="mirror://pypi/P/${MY_PN}/${MY_P}.tar.gz"
 
 SLOT="0"
 LICENSE="Apache-2.0"
-KEYWORDS="alpha amd64 arm ia64 ppc ppc64 sparc x86 ~amd64-linux ~x86-linux"
-IUSE="test"
+KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux"
+IUSE="doc test"
 
 RDEPEND="dev-python/bottle[${PYTHON_USEDEP}]"
 DEPEND="test? ( ${RDEPEND} )"
@@ -35,4 +35,9 @@ python_prepare_all() {
 
 python_test() {
 	esetup.py try || die
+}
+
+python_install_all() {
+	use doc && local HTML_DOCS=( doc/html/. )
+	distutils-r1_python_install_all
 }
